# graphalfred

./: Makefile  README.md  TODO.md
.claude/: settings.local.json
backend/: Cargo.toml
backend/src/: main.rs
macos/: Package.swift
macos/Sources/GraphAlfredApp/: APIClient.swift  BackendController.swift  ContentView.swift  GlobalHotKeyManager.swift  GraphAlfredApp.swift  GraphCanvasView.swift  GraphViewModel.swift  Models.swift  NoteSheets.swift  SettingsPanel.swift  UIStyles.swift
